The header of error messages in popups would be hard to read in dark mode. Fixes #4174.

--- a/components/frontend/src/semantic_ui_react_wrappers/Popup.css
+++ b/components/frontend/src/semantic_ui_react_wrappers/Popup.css
@@ -2,6 +2,10 @@
     background-color: rgba(60, 65, 70);
 }
 
+.ui.inverted.popup .header {
+    color: #912d2b; /* For some reason the header color is white within an inverted popup. Override. */
+}
+
 .ui.inverted.popup:before {
     background-color: rgba(60, 65, 70) !important;
 }
